Overflow UI bug fixed

--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -13,9 +13,10 @@
 .map{
     margin-top: 5px;
     margin-bottom: 8px;
-    max-width: inherit;
     overflow-x: scroll;
 }
 .chart{
-    width: inherit;
+    height: 600px;
+    width: 1150px;
+    
 }
